# lolcat

./: Cargo.toml  README.md
src/: cat.rs  main.rs
