[package]
name = "lolcat"
version = "2.0.0"
authors = ["Emil Thorenfeldt <emt@magenta.dk>", "Umang Raghuvanshi <u@umangis.me>"]
description = "The good ol' lolcat, now with fearless concurrency."
license = "MIT"
repository = "https://git.magenta.dk/emt/lolcat"

[dependencies]
rand = "0.7.3"
rand_distr = "0.3.0"
atty = "0.2"
structopt = "0.3.21"
